# gsplat_raytracer

./: .gitignore  CMakeLists.txt  ext.cpp  render_points.cu  render_points.h  setup.py
include/: auxiliary.h  float3_utils.h  grid.h  raytrace.h  render.h
src/: ext.cpp  main.cu  raytrace.cu  raytrace_backward.cu  raytrace_forward.cu
